# sample-GEDD

./: .gitignore  LAUNCH.md  METHODOLOGY.md  README.md  SETUP.md  blog-gedd-power.md  conference-talk.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.kiro/: README.md  (+5 more)
grounded-evals/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
grounded-evals/.claude/commands/: gedd-chat.md  gedd-status.md  gedd.md
grounded-evals/agentcore/: pyproject.toml
grounded-evals/agentcore/src/agent_playground/: __init__.py  coach.py  entry.py  evaluator.py
grounded-evals/configs/: agent_spec_example.yaml  llm_config.yaml
grounded-evals/docs/: autobot-llm-judge.md  blog-100-golden-1000-production.md  blog-cpo-perspective.md  blog-domain-expert-testing.md  blog-evaluation-architecture-scientific.md  blog-explain-to-product-owner.md  blog-gedd-skill-domain-expert.md  blog-grounded-evidence-to-judge-gates.md  blog-intern-onboarding.md  blog-ml-engineer-scale.md  blog-model-benchmarking.md  blog-principal-engineer.md  blog-privacy-109-queries.md  blog-privacy-benchmarking.md  blog-ship-agents-you-can-defend.md  blog-what-is-gedd-for-domain-product-ml.md  building-llm-as-a-judge.md  claimsbot-llm-judge.md  clinicalbot-llm-judge.md  cohens-kappa-for-llm-judges.md  domain-expert-guide.md  edubot-llm-judge.md  energybot-llm-judge.md  foodbot-llm-judge.md  hrbot-llm-judge.md  insurebot-llm-judge.md  launch-checklist.md  lexbot-llm-judge.md  migratebot-llm-judge.md  paste-in-traces.md  pipeline-guide.md  pixelguard-llm-judge.md  pm-to-ml-llm-judge.md  propbot-llm-judge.md  rxbot-llm-judge.md  taxbot-llm-judge.md  travelbot-llm-judge.md  vaultex-llm-judge.md  wealthbot-llm-judge.md
grounded-evals/docs/research/: README.md  consent-intro.md  interview-script.md  notes-template.md  scoring-sheet.md  synthesis-template.md
grounded-evals/infra/: app.py  cdk.json  requirements.txt
grounded-evals/infra/stacks/: agentcore_stack.py  cognito_stack.py  ecr_stack.py  ecs_stack.py  network_stack.py
grounded-evals/scripts/: deploy-agent.sh  deploy-all.sh  deploy-infra.sh  deploy-ui.sh  export_gdpr_runtime_snapshot.py  release_check.py
grounded-evals/src/grounded_evals/: __init__.py  agentcore_client.py  app.py  cli.py  feedback_loop.py  harness_client.py
grounded-evals/src/grounded_evals/agent/: __init__.py  handler.py  prompt.py  tools.py
grounded-evals/src/grounded_evals/axial_coding/: __init__.py  mapper.py  paradigm.py
grounded-evals/src/grounded_evals/ears/: __init__.py  baseline.py  measurement.py  parser.py  transformer.py
grounded-evals/src/grounded_evals/guide/: __init__.py  markdown_export.py  session.py  session_io.py
grounded-evals/src/grounded_evals/ingest/: __init__.py  models.py  parser.py
grounded-evals/src/grounded_evals/judge_builder/: __init__.py  active_learning.py  calibrate.py  constitutional.py  ensemble.py  few_shot.py  prompt_gen.py  rubric.py
grounded-evals/src/grounded_evals/llm/: __init__.py  client.py
grounded-evals/src/grounded_evals/models/: __init__.py  core.py
grounded-evals/src/grounded_evals/open_coding/: __init__.py  compare.py  fracture.py  saturation.py
grounded-evals/src/grounded_evals/ui/: aaa_game_demo_page.py  aaa_game_localization_demo.py  analysis_page.py  baseline_requirements.py  coding_page.py  demo_data.py  demos_page.py  domain_demos.py  ears_page.py  eval_page.py  eval_tab.py  game_release_demos.py  gdpr_auditor_demo.py  gdpr_auditor_runtime_snapshot.py  gdpr_demo_page.py  home_page.py  improvement_page.py  inductive_pm_demo.py  journey_map.py  judge_builder_page.py  layout.py  mass_effect_demo_page.py  mass_effect_localization_demo.py  new_domain_demos.py  report_page.py  support_bot_demo.py  theme.py
grounded-evals/src/grounded_evals/ui/steps/: build_context.py  define_agent.py  deploy.py  error_analysis.py  eval_run.py  golden_queries.py  judge_builder_step.py  refine.py  synthetic.py  system_prompt.py
grounded-evals/tests/: test_active_learning.py  test_agent_prompt.py  test_agentcore_client.py  test_axial_coding.py  test_cli.py  test_constitutional.py  test_ears_engine.py  test_edge_cases.py  test_ensemble.py  test_few_shot.py  test_guide_session.py  test_ingest.py  test_integration.py  test_judge_builder.py  test_llm_config.py  test_markdown_export.py  test_models_core.py  test_open_coding.py  test_open_coding_extended.py  test_prompt_gen.py  test_ui_logic.py
(+24 files in other folders)
