[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-playground-agentcore"
version = "0.1.0"
description = "AgentCore runtime agent for Agent Playground — coaching and evaluation"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.0.0",
    "anthropic[bedrock]>=0.40.0",
    "boto3>=1.35.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
